--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,153 +1,170 @@
 *,
 ::after,
 ::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-
+html {
+	width: 100vw;
+	height: 100vh;
+}
 * {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 1rem;
-  color: white;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
+	font-size: 1rem;
+	color: white;
+}
+.normalButton {
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 0.5rem;
+
+	color: black;
+	cursor: pointer;
+	border: none;
+	transition: all 0.2s ease-in-out;
+}
+.mainButton {
+	padding: 1rem;
+	background: #3b3b3b;
+	border: none;
+	cursor: pointer;
+	width: 100%;
 }
 
-button {
-  padding: 1rem;
-  background: #3b3b3b;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-.loginForm button {
-  background-color: white;
-  color: black;
-}
-form button:hover {
-  background-color: #303f9f;
-  color: white;
+.normalButton:hover {
+	background-color: #303f9f;
+	color: white;
 }
 
 button:active {
-  box-shadow: none;
+	box-shadow: none;
 }
 .browseButton {
-  background-color: #3b3b3b;
-  border-radius: 0 0.5rem 0.5rem 0;
+	background-color: #3b3b3b;
+	border-radius: 0 0.5rem 0.5rem 0;
 }
 .loginButton {
-  margin-top: 0.5rem;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  transition: all 0.2s ease-in-out;
-  width: 50%;
+	/* margin-top: 0.5rem; */
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 0.5rem;
+	transition: all 0.2s ease-in-out;
+	width: 50%;
 }
 .left {
-  width: 50%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	width: 50%;
+	max-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .right {
-  width: 50%;
-  height: 100vh;
+	width: 49%;
+	height: 100vh;
 }
 form {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 .loginForm {
-  gap: 1rem;
-  width: 50%;
-  justify-content: center;
-  margin-bottom: 2rem;
-  background-color: #212121;
-  border-radius: 1.5rem;
-  padding: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 49%;
+	justify-content: center;
+	/* margin-bottom: 2rem; */
+	background-color: #212121;
+	border-radius: 1.5rem;
+	padding: 3rem;
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .loginForm input {
-  width: 75%;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  border: none;
-  color: white;
-  background-color: #515151;
+	width: 75%;
+	padding: 0.5rem;
+	border-radius: 0.5rem;
+	border: none;
+	color: white;
+	background-color: #515151;
 }
 .loginForm input::placeholder {
-  color: #a7a7a7;
+	color: #a7a7a7;
 }
 .three {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 main {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  height: 100vh;
-  background-color: #1e2748;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: row;
+	min-width: 100vw;
+	min-height: 100vh;
+	background-color: #1e2748;
+	justify-content: center;
+	align-items: center;
 }
 .menu {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 20%;
+	height: 100%;
+	align-self: flex-start;
 }
 .context {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  height: 100vh;
-  background-color: #515151;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 80%;
+	height: 100vh;
+	background-color: #515151;
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
 }
 .col {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
 .row {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
+	display: flex;
+	flex-direction: row;
+	gap: 0.5rem;
+}
+.subtitle {
+	margin: 1rem;
 }
 input {
-  border-radius: 0.5rem;
-  border: none;
-  padding: 0.5rem;
-  color: black;
+	border-radius: 0.5rem;
+	border: none;
+	padding: 0.5rem;
+	color: black;
 }
 .content .col {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 .content .col input {
-  width: 50%;
+	width: 80%;
 }
 .content .col:first-child {
-  margin-top: 0;
+	margin-top: 0;
 }
 
 .modalHours {
-  width: 95%;
-  height: 95%;
-  background-color: #696969;
-  border-radius: 0.5rem;
+	width: 95%;
+	height: 95%;
+	background-color: #696969;
+	border-radius: 0.5rem;
+	position: relative;
 }
 .title {
-  background: #3b3b3b;
-  padding: 1rem;
-  border-radius: 0.5rem 0.5rem 0 0;
+	background: #3b3b3b;
+	padding: 1rem;
+	border-radius: 0.5rem 0.5rem 0 0;
 }
+
