--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@ html {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	font-size: 1rem;
-	color: white;
+	/* color: white; */
 }
 .normalButton {
 	padding: 0.5rem 1rem;
@@ -53,45 +53,24 @@ button:active {
 	transition: all 0.2s ease-in-out;
 	width: 50%;
 }
-.left {
+/* .left {
 	width: 50%;
 	max-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
+	gap: 1rem;
+} */
 .right {
-	width: 49%;
+	width: 50%;
 	height: 100vh;
 }
 form {
 	display: flex;
 	flex-direction: column;
 }
-.loginForm {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 49%;
-	justify-content: center;
-	/* margin-bottom: 2rem; */
-	background-color: #212121;
-	border-radius: 1.5rem;
-	padding: 3rem;
-	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-}
-.loginForm input {
-	width: 75%;
-	padding: 0.5rem;
-	border-radius: 0.5rem;
-	border: none;
-	color: white;
-	background-color: #515151;
-}
-.loginForm input::placeholder {
-	color: #a7a7a7;
-}
+
 .three {
 	width: 100%;
 	height: 100%;
@@ -101,9 +80,7 @@ main {
 	flex-direction: row;
 	min-width: 100vw;
 	min-height: 100vh;
-	background-color: #1e2748;
 	justify-content: center;
-	align-items: center;
 }
 .menu {
 	display: flex;
@@ -138,6 +115,19 @@ main {
 }
 .subtitle {
 	margin: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.card {
+	width: 100%;
+	background-color: #48aabb;
+	color: black;
+	border-radius: 0.5rem;
+	padding: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 input {
 	border-radius: 0.5rem;
@@ -145,6 +135,7 @@ input {
 	padding: 0.5rem;
 	color: black;
 }
+
 .content .col {
 	margin-top: 1rem;
 }
@@ -158,9 +149,17 @@ input {
 .modalHours {
 	width: 95%;
 	height: 95%;
+
 	background-color: #696969;
 	border-radius: 0.5rem;
 	position: relative;
+}
+.cardTitle {
+	font-size: 1.2rem;
+}
+.buttonGroup {
+	display: flex;
+	gap: 0.5rem;
 }
 .title {
 	background: #3b3b3b;
