--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,7 +15,11 @@ html {
 	font-size: 1rem;
 	/* color: white; */
 }
-
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
 .mainButton {
 	padding: 1rem;
 	background: #3b3b3b;
