--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *,
 ::after,
 ::before {
@@ -127,4 +131,3 @@ input {
 	padding: 1rem;
 	border-radius: 0.5rem 0.5rem 0 0;
 }
-
