--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -556,8 +556,124 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.contents {
-  display: contents;
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+.absolute {
+  position: absolute;
+}
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.resize {
+  resize: both;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, -webkit-text-decoration-color, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 *,
@@ -571,94 +687,114 @@ video {
 * {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
+  font-size: 1rem;
+  /* color: white; */
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.normalButton:hover {
+  background-color: #303f9f;
   color: white;
 }
 
-/* 
-button {
-  padding: 1rem;
-  background: #3b3b3b;
-  border: none;
-  cursor: pointer;
-}
-.form button {
-  background-color: white;
-  color: black;
-}
-.form button:hover {
-  background-color: #303f9f;
-  color: white;
-  cursor: pointer;
-}
-button:active {
-  box-shadow: none;
-}
-.loginButton {
-  margin-top: 0.5rem;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  transition: all 0.2s ease-in-out;
-  width: 50%;
-}
-.left {
-  width: 50%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 .right {
   width: 50%;
   height: 100vh;
 }
-.form {
+
+form {
   display: flex;
-  gap: 1rem;
-  width: 50%;
   flex-direction: column;
-  justify-content: center;
-  margin-left: -15%;
-  margin-bottom: 20%;
-  background-color: #212121;
-  border-radius: 1.5rem;
-  padding: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-.form input {
-  width: 75%;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  border: none;
-  color: white;
-  background-color: #515151;
-}
-.form input::placeholder {
-  color: #a7a7a7;
-}
+
 .three {
   width: 100%;
   height: 100%;
 }
+
 main {
   display: flex;
   flex-direction: row;
-  width: 100vw;
-  height: 100vh;
-  background-color: hsl(262, 13%, 17%);
+  min-width: 100vw;
+  min-height: 100vh;
+  justify-content: center;
 }
+
 .menu {
   display: flex;
   flex-direction: column;
   width: 20%;
   height: 100%;
+  align-self: flex-start;
 }
+
 .context {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 80%;
+  height: 100vh;
   background-color: #515151;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.subtitle {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card {
+  width: 100%;
+  background-color: #48aabb;
+  color: black;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input {
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem;
+  color: black;
+}
+
+.content .col {
+  margin-top: 1rem;
+}
+
+.content .col input {
+  width: 80%;
+}
+
+.content .col:first-child {
+  margin-top: 0;
 }
 
 .modalHours {
@@ -666,9 +802,70 @@ main {
   height: 95%;
   background-color: #696969;
   border-radius: 0.5rem;
+  position: relative;
 }
+
+.cardTitle {
+  font-size: 1.2rem;
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 0.5rem;
+}
+
 .title {
   background: #3b3b3b;
   padding: 1rem;
   border-radius: 0.5rem 0.5rem 0 0;
-} */
+}
+
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+
+.dark .dark\:border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.dark .dark\:bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:placeholder-gray-400::-webkit-input-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.dark .dark\:placeholder-gray-400:-ms-input-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.dark .dark\:placeholder-gray-400::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
+}
+
+.dark .dark\:focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.dark .dark\:focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
